[package]
name = "neo4j"
version = "0.1.0"
authors = ["Amim Knabben <amim.knabben@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0.2" }
serde_json = { version = "1.0.2" }
serde_derive = { version = "1.0.2" }
juniper = { version = "0.14.2", default-features = false }
juniper_rocket = "0.5.2"
r2d2 = "*"
r2d2_cypher = "0.4.0"
clap = "2.33.0"
rocket_cors = { version = "0.5.2", default-features = false }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["cypher_pool"]
